# Parsenvy

./: .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CODE_OF_CONDUCT.rst  CONTRIBUTING.md  CONTRIBUTING.rst  LICENSE  Makefile  Pipfile  README.rst  appveyor.yml  justfile  modd.conf  parsenvy.py  pt.py  pyproject.toml  setup.py  tests.py
.github/: CONTRIBUTING.md
.github/workflows/: code-quality-checks.yml  pypi-publish.yml
docs/source/: bool.rst  changelog.rst  conduct.rst  conf.py  contributing.rst  default_if_none.rst  dict.rst  float.rst  index.rst  int.rst  list.rst  requirements.txt  set.rst  str.rst  tuple.rst
parsenvy/: __init__.py  __version__.py  parsenvy.py
src/parsenvy/: __init__.py  parsenvy.py
tests/: __init__.py  test_bool.py  test_default_if_none.py  test_float.py  test_int.py  test_list.py  test_set.py  test_str.py  test_tuple.py
