[tool.poetry]
name = "Parsenvy"
version = "3.0.2"
description = "Enviously elegant environment variable parsing"
license = "BSD-3-Clause"
authors = ["Nik Kantar <nik@nkantar.com>"]
readme = "README.rst"
homepage = "https://pypi.org/project/Parsenvy"
repository = "https://github.com/nkantar/Parsenvy"
documentation = "https://parsenvy.readthedocs.io"

keywords = ["environment", "variables"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

include = [
  "CHANGELOG.md",
  "CODE_OF_CONDUCT.rst",
  "CONTRIBUTING.rst",
  "LICENSE",
  "Makefile",
  "README.rst",
  "bin/*.sh",
  "docs/Makefile",
  "docs/make.bat",
  "docs/source/*.rst",
  "docs/source/conf.py",
  "parsenvy/*.py",
  "poetry.lock",
  "pyproject.toml",
  "tests/test_*.py",
]

[tool.poetry.dependencies]
python = "^3.9" # TODO not ideal, supporting 3.8 would be good

# Docs
sphinx = {version = "^7.2.6", optional = true}
sphinx-rtd-theme = {version = "^2.0.0", optional = true}
m2r2 = {version = "^0.3.3.post2", optional = true}

[tool.poetry.dev-dependencies]
mypy = "^1.8.0"
black = "^23.12.1"
flake8 = "^6.1.0"
pydocstyle = "^6.3.0"
pytest = "^7.4.4"
pytest-watch = "^4.2.0"
coverage = "^7.4.0"
pytest-cov = "^4.1.0"
pdbpp = "^0.10.3"

# Docs
# NOTE: Please also add to:
#   - [tool.poetry.dependencies] above as optional
#   - [tool.poetry.extras] below
sphinx = "^7.2.6"
sphinx-rtd-theme = "^2.0.0"
m2r2 = "^0.3.3.post2"

[tool.poetry.extras]
docs = [
  "sphinx",
  "sphinx-rtd-theme",
  "m2r2",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest]
python_paths = "parsenvy"

[tool.coverage.run]
branch = true
source = ["parsenvy"]

[tool.coverage.report]
show_missing = true
