[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Parsenvy"
version = "3.0.2"
dependencies = []
requires-python = ">=3.9"
authors = [
    {name = "Nik Kantar", email = "nik@nkantar.com" },
]
description = "Enviously elegant environment variable parsing"
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
  "Typing :: Typed",
]

[tool.uv]
dev-dependencies = [
    "ruff>=0.6.2",
    "pytest>=8.3.2",
    "pydocstyle>=6.3.0",
    "mypy>=1.11.2",
    "pdbpp>=0.10.3",
    "coverage>=7.6.1",
    "sphinx>=7.4.7",
    "sphinx-rtd-theme>=2.0.0",
    "sphinx-mdinclude>=0.6.2",
    "pytest-cov>=5.0.0",
]

[tool.pytest]
python_paths = "src/parsenvy"

[tool.coverage.run]
branch = true
source = ["src"]

[tool.coverage.report]
show_missing = true
